YAML/traefik-yaml/1.serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
