YAML/traefik-yaml/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: api-gateway
  namespace: api-gateway-system
spec:
  ports:
  - name: traefik
    port: 8080
    protocol: TCP
    targetPort: traefik
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure
  - name: k8s
    port: 6443
    protocol: TCP
    targetPort: k8s
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: api-gateway
  sessionAffinity: None
  type: LoadBalancer
