YAML/traefik-yaml/console-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: console-ingressroute
  namespace: console-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`console.console-system.traefik`)
    services:
    - name: console
      namespace: console-system
      port: "HTTPS"
      scheme: https
  tls:
    secretName: console-tls
