YAML/traefik-yaml/dashboard-secret.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: api-gateway-system
spec:
  entryPoints:
  - traefik
  routes:
  - match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
      - name: dashboard-auth
        namepsace: api-gateway-system
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: api-gateway-system
spec:
  basicAuth:
    secret: dashboard-secret # Kubernetes secret named "secretName"
