YAML/traefik-yaml/nginx-console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: nginx-shd
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: nginx-console-ingress
  namespace: console-system
spec:
  rules:
    - host: console.console-system.svc
      http:
        paths:
          - backend:
              service:
                name: console-clusterip
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - console.console-system.svc
      secretName: console-https-secret
